--- a/src/main/gameData/configs/default/configuratorExcommunicationsFile.json
+++ b/src/main/gameData/configs/default/configuratorExcommunicationsFile.json
@@ -27,7 +27,7 @@
       },
       {
         "excommunicationType": "strengthMalusExcommunication",
-        "strengthMalusExcommunication":{"witheDiceBonus":-1,"blackDiceBonus":1,"orangeDiceBonus":1 }
+        "strengthMalusExcommunication":{"witheDiceBonus":-1,"blackDiceBonus":-1,"orangeDiceBonus":-1 }
       }
     ],
     [
@@ -89,7 +89,7 @@
       {
         "excommunicationType":"endGameAssetsExcommunication",
         "onAssetsMalus":[
-          {"servants":1,"coin":1,"stone":1,"wood":1},{"victoryPoints":1}
+          {},{"victoryPoints":1}
         ]
       }
     ]
